# is-number-rs

./: Cargo.toml  README.md
examples/: number_validator.rs
src/: lib.rs
